fix: mobile nav screen scroll bug on iphone

--- a/src/components/navigation/styles.module.scss
+++ b/src/components/navigation/styles.module.scss
@@ -99,6 +99,7 @@
   opacity: 0;
   transition: opacity 300ms cubic-bezier(0.25, 0, 0.19, 1);
   pointer-events: none;
+  touch-action: none;
 
   @include mq("desktop") {
     display: none;
@@ -122,7 +123,6 @@
   gap: 16px;
   transform: translateY(-10px);
   transition: transform 300ms cubic-bezier(0.15, 0, 0.25, 1);
-  overflow-y: scroll;
   margin: 0;
 
   .open & {
